src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>TA_Region__c</fullName>
        <label>TA Region</label>
        <picklist>
            <controllingField>TA_Country__c</controllingField>
            <picklistValues>
                <fullName>Calabarzon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Luzon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Region(ex. Central Area)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East of England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kowloon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Capital Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Territories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North-East Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North West England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yorkshire and the Humber</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TA_Street_Name__c</fullName>
        <label>TA Street Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA_Street_Number__c</fullName>
        <label>TA Street Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA_Sub_region__c</fullName>
        <label>TA Sub-region</label>
        <picklist>
            <controllingField>TA_Region__c</controllingField>
            <picklistValues>
                <fullName>Aberdeen City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aberdeenshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antrim and Newtownabbey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argyll and Bute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armagh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banbridge and Craigavon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bath and North East Somerset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bedford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackburn with Darwen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackpool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blaenau Gwent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bournemouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bracknell Forest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridgend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brighton and Hove</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bristol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buckinghamshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caerphilly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambridgeshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carmarthenshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Causeway Coast and Glens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Bedfordshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceredigion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheshire East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheshire West and Chester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City of Edinburgh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clackmannanshire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trading_Address_if_different__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trading Address (if different)</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActSmart_04June2015_Clickers</fullName>
        <columns>CAMPAIGN_MEMBER.STATUS</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN_MEMBER.STATUS</field>
            <operation>contains</operation>
            <value>clicker</value>
        </filters>
        <label>ActSmart_04June2015_Clickers</label>
        <sharedTo>
            <role>UK</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ant_Marketing</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Owner_Name__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Lead_Owner_Profile_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>Ant 1</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>6/2/2015 12:00 AM</value>
        </filters>
        <label>Ant Marketing</label>
        <sharedTo>
            <roleAndSubordinates>UK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ant_Marketing_leads_upload_18_05</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>Ant</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>5/18/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>LEAD.MOBILE_PHONE</field>
            <operation>equals</operation>
        </filters>
        <label>Ant Marketing ( leads upload 18/05)</label>
        <sharedTo>
            <roleAndSubordinates>UK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X0_My_Leads</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Flag__c</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CampaignID__c</columns>
        <columns>Activity_Due_Date__c</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <label>0 My Leads</label>
    </listViews>
    <listViews>
        <fullName>X1_All_Open_Leads_Hong_Kong</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Flag__c</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CampaignID__c</columns>
        <columns>Activity_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Hong_Kong</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>1 All Open Leads (Hong Kong)</label>
        <sharedTo>
            <roleAndSubordinates>Hong_Kong</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X1_All_Open_Leads_Philippines</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Flag__c</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CampaignID__c</columns>
        <columns>Activity_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Philippines</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>1 All Open Leads (Philippines)</label>
        <sharedTo>
            <roleAndSubordinates>Philippines</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X1_All_Open_Leads_Singapore</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Flag__c</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CampaignID__c</columns>
        <columns>Activity_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Singapore</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>1 All Open Leads (Singapore)</label>
        <sharedTo>
            <roleAndSubordinates>Singapore</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X1_All_Open_Leads_UK</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Flag__c</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CampaignID__c</columns>
        <columns>Activity_Due_Date__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.UK</value>
        </filters>
        <label>1 All Open Leads (UK)</label>
        <sharedTo>
            <roleAndSubordinates>UK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2_Allocated_Leads_Hong_Kong</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Flag__c</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CampaignID__c</columns>
        <columns>Activity_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Hong_Kong</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notContain</operation>
            <value>Unallocated</value>
        </filters>
        <label>2 Allocated Leads (Hong Kong)</label>
        <sharedTo>
            <roleAndSubordinates>Hong_Kong</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2_Allocated_Leads_Philippines</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Flag__c</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CampaignID__c</columns>
        <columns>Activity_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notContain</operation>
            <value>Unallocated</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Philippines</value>
        </filters>
        <label>2 Allocated Leads (Philippines)</label>
        <sharedTo>
            <roleAndSubordinates>Philippines</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2_Allocated_Leads_Singapore</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Flag__c</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CampaignID__c</columns>
        <columns>Activity_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Singapore</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notContain</operation>
            <value>Unallocated</value>
        </filters>
        <label>2 Allocated Leads (Singapore)</label>
        <sharedTo>
            <roleAndSubordinates>Singapore</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2_Allocated_Leads_UK</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Flag__c</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CampaignID__c</columns>
        <columns>Activity_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.UK,Lead.Qualified_UK</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notContain</operation>
            <value>Unallocated,Pickup</value>
        </filters>
        <filters>
            <field>LEAD.CONVERTED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>2 Allocated Leads (UK)</label>
        <sharedTo>
            <roleAndSubordinates>UK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X3_Unallocated_Leads_Hong_Kong</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Flag__c</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CampaignID__c</columns>
        <columns>Activity_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Hong_Kong</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>Unallocated Leads</value>
        </filters>
        <label>3 Unallocated Leads (Hong Kong)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Hong_Kong</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X3_Unallocated_Leads_Philippines</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Flag__c</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CampaignID__c</columns>
        <columns>Activity_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Philippines</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>Unallocated</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notContain</operation>
            <value>Web</value>
        </filters>
        <label>3 Unallocated Leads (Philippines)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Philippines</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X3_Unallocated_Leads_Singapore</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>Flag__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CampaignID__c</columns>
        <columns>Activity_Due_Date__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Singapore</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>Unallocated</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notContain</operation>
            <value>Web</value>
        </filters>
        <label>3 Unallocated Leads (Singapore)</label>
        <queue>Unallocated_Leads_Singapore</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>Singapore</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Hong_Kong</fullName>
        <active>true</active>
        <businessProcess>Lead Process</businessProcess>
        <description>Lead belongs to HK</description>
        <label>Hong Kong</label>
    </recordTypes>
    <recordTypes>
        <fullName>Philippines</fullName>
        <active>true</active>
        <businessProcess>Lead Process</businessProcess>
        <description>Lead belongs to PP</description>
        <label>Philippines</label>
    </recordTypes>
    <recordTypes>
        <fullName>Qualified_Hong_Kong</fullName>
        <active>true</active>
        <businessProcess>Qualified Lead Process</businessProcess>
        <description>Qualified lead belongs to HK</description>
        <label>Hong Kong Qualified</label>
    </recordTypes>
    <recordTypes>
        <fullName>Qualified_Philippines</fullName>
        <active>true</active>
        <businessProcess>Qualified Lead Process</businessProcess>
        <description>Qualified lead belongs to PP</description>
        <label>Philippines Qualified</label>
    </recordTypes>
    <recordTypes>
        <fullName>Qualified_Singapore</fullName>
        <active>true</active>
        <businessProcess>Qualified Lead Process</businessProcess>
        <description>Qualified lead belongs to SG</description>
        <label>Singapore Qualified</label>
    </recordTypes>
    <recordTypes>
        <fullName>Qualified_UK</fullName>
        <active>true</active>
        <businessProcess>Qualified Lead Process</businessProcess>
        <description>Qualified lead belongs to UK</description>
        <label>UK Qualified</label>
    </recordTypes>
    <recordTypes>
        <fullName>Singapore</fullName>
        <active>true</active>
        <businessProcess>Lead Process</businessProcess>
        <description>Lead belongs to SG</description>
        <label>Singapore</label>
    </recordTypes>
    <recordTypes>
        <fullName>UK</fullName>
        <active>true</active>
        <businessProcess>Lead Process</businessProcess>
        <description>Lead belongs to UK</description>
        <label>UK</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>VR_04_Lead_Disposition_Validation</fullName>
        <active>true</active>
        <description>Ensures a rejected reason is selected when lead status is Rejected.</description>
        <errorConditionFormula>AND(OR(ISPICKVAL(Status,&apos;Not Interested&apos;),ISPICKVAL(Status,&apos;Not Interested&apos;),ISPICKVAL(Status,&apos;Opt Out&apos;),ISPICKVAL(Status,&apos;Not Qualified&apos;),ISPICKVAL(Status,&apos;Referred Out&apos;)),ISPICKVAL(  Reject_Reason_Code__c,&apos;&apos;))</errorConditionFormula>
        <errorDisplayField>Reject_Reason_Code__c</errorDisplayField>
        <errorMessage>[VR 04] Please select Reject Reason Code if a lead is Rejected.</errorMessage>
    </validationRules>
</CustomObject>